SERVER-43034 Correctly deal with infinite results in DoubleDoubleSummation

(cherry picked from commit 9d31de1d5458e865439e643eb75f719d5217d064)